--- a/ayat.html
+++ b/ayat.html
@@ -7,6 +7,11 @@
   <title>القرآن الكريم</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <body>
+
+     <div class="logo-container">
+  <img src="ss.azkarylogo" alt="شعار الموقع" class="site-logo">
+</div>
+
     <header>
     <h1>آيات قرآنية</h1>
   <p>يقرأ يوم القيامة، كما كان يقرأ في الدنيا، وأن منزلته في الجنة عند آخر آية يقرؤها.</p>
