--- a/azkar.html
+++ b/azkar.html
@@ -6,7 +6,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>أذكار الصباح والمساء</title>
 <style>
-  body {
+
+ 
+ body {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     background: #f9f9f7;
     margin: 0; padding: 0;
@@ -99,6 +101,11 @@
 </style>
 </head>
 <body>
+  
+   <div class="logo-container">
+  <img src="ss.azkarylogo" alt="شعار الموقع" class="site-logo">
+</div>
+
   <header>
     <h1>اذكار الصباح والمساء</h1>
 </header>
