--- a/ad3eya.html
+++ b/ad3eya.html
@@ -9,6 +9,10 @@
 </head>
 <body>
 
+   <div class="logo-container">
+  <img src="ss.azkarylogo" alt="شعار الموقع" class="site-logo">
+</div>
+
   <header>
     <h1>الأدعية</h1>
     <p>أدعية مأثورة من السنة</p>
