--- a/tafsir.html
+++ b/tafsir.html
@@ -8,6 +8,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+
+   <div class="logo-container">
+  <img src="ss.azkarylogo" alt="شعار الموقع" class="site-logo">
+</div>
+
   <header>
     <h1>الاربعون نوويه</h1>
     <p>الأربعون النووية هي مجموعة من الأحاديث التي جمعها الإمام النووي، وهي ذات فضل كبير في الإسلام.
