--- a/index.html
+++ b/index.html
@@ -13,14 +13,12 @@
 </head>
 <body>
 
-  <div class="logo-container">
-  <img src="ss.azkarylogo" alt="شعار الموقع" class="site-logo">
-</div>
+  
 
   <div class="background"></div>
 
   <header>
-    <h1>.</h1>
+    <h1>أذكاري</h1>
     <p>ذكر، دعاء، قرآن، طمأنينة</p>
   </header>
 
