--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <div class="info-boxes">
   <div class="info-box">
-    <h3>عدد الزوار</h3>
+    <h3>عدد زياراتك للموقع</h3>
     <p id="visitor-count">...جاري التحميل</p>
   </div>
 
