--- a/ayat.html
+++ b/ayat.html
@@ -11,7 +11,7 @@
    
 
     <header>
-    <h1>آيات قرآنية</h1>
+    <h1>القرآن الكريم</h1>
   <p>يقرأ يوم القيامة، كما كان يقرأ في الدنيا، وأن منزلته في الجنة عند آخر آية يقرؤها.</p>
   </header>
 
